<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.xiaopeng.systemui.quickmenu.widgets.FlowLayout android:id="@+id/quick_menu_vertical_flexboxlayout_1" android:layout_width="wrap_content" android:layout_height="wrap_content" app:flChildSpacing="@dimen/quick_menu_normal_vertical_margin" app:flRowSpacing="@dimen/quick_menu_normal_vertical_margin">
        <com.xiaopeng.systemui.quickmenu.widgets.XSelectorAnimButton android:textSize="@dimen/quick_menu_large_textsize" android:textColor="@drawable/quick_menu_selectorbutton_selector" android:id="@+id/quick_menu_driver_mode" android:layout_width="@dimen/quick_menu_large_tile_width" android:layout_height="@dimen/quick_menu_normal_height" app:itemText="@array/driver_mode_tiles"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_auto_wiper" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_multisate_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_int_wiper_speed" app:tile_textColor="@color/quick_menu_selected_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_window_open" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_windowopen_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_window_open" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_window_close" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_windowclose_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_window_close" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_window_air" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_window_ventilation_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_window_air" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_auto_park" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_auto_hold_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_auto_park" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_rear_mirror_open" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_mirror_open_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_rear_mirror_open" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_rear_mirror_close" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_mirror_close_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_rear_mirror_close" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_down_hill" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_downhill_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_down_hill" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_truck" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_trunk_open_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_back_box" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_backbox_open" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_backbox_open" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_backbox_close" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_backbox_close" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_360" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_qs_360_small" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_360" app:tile_textColor="@color/quick_menu_tile_text_color"/>
    </com.xiaopeng.systemui.quickmenu.widgets.FlowLayout>
    <com.xiaopeng.systemui.quickmenu.widgets.FlowLayout android:id="@+id/quick_menu_vertical_flexboxlayout_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/quick_menu_normal_vertical_large_margin" android:layout_below="@+id/quick_menu_vertical_flexboxlayout_1" app:flChildSpacing="@dimen/quick_menu_normal_vertical_margin" app:flRowSpacing="@dimen/quick_menu_normal_vertical_margin">
        <com.xiaopeng.systemui.quickmenu.widgets.QcSliderLayout android:id="@+id/quick_menu_bright" android:clickable="true" android:layout_width="@dimen/quick_menu_large_tile_width" android:layout_height="@dimen/quick_menu_normal_height" android:stateListAnimator="@animator/tile_button_selector_animator" app:sliderLayout_bg_color="@color/quick_menu_ui_background" app:sliderLayout_corner_radius="@dimen/quick_menu_radius" app:sliderLayout_slider_color="@color/quick_menu_ui_checked_color" app:sliderLayout_slider_inner_corner_radius="4dp" app:sliderLayout_slider_outer_corner_radius="@dimen/quick_menu_radius_inner">
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/bright_indicator1" android:background="@drawable/ic_mid_brightness" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/quick_menu_volume_slider_svg_margin_start"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_theme_text_01" android:id="@+id/bright_indicator2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qs_panel_screen_brightness" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/quick_menu_volume_slider_svg_margin_end"/>
        </com.xiaopeng.systemui.quickmenu.widgets.QcSliderLayout>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_clean_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_clean_mode" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_screenclean" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.QcSliderLayout android:id="@+id/quick_menu_music_volume" android:clickable="true" android:layout_width="@dimen/quick_menu_large_tile_width" android:layout_height="@dimen/quick_menu_normal_height" android:stateListAnimator="@animator/tile_button_selector_animator" app:sliderLayout_bg_color="@color/quick_menu_ui_background" app:sliderLayout_corner_radius="@dimen/quick_menu_radius" app:sliderLayout_slider_color="@color/quick_menu_ui_checked_color" app:sliderLayout_slider_inner_corner_radius="4dp" app:sliderLayout_slider_outer_corner_radius="@dimen/quick_menu_radius_inner">
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/volume_indicator1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mid_music" android:layout_centerVertical="true" android:layout_marginStart="@dimen/quick_menu_volume_slider_svg_margin_start"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_theme_text_01" android:id="@+id/volume_indicator2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qs_panel_media_volume" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/quick_menu_volume_slider_svg_margin_end"/>
        </com.xiaopeng.systemui.quickmenu.widgets.QcSliderLayout>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_speech_setting" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_voiceinput" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_voice_input" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_space_capsule_sleep" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_space_sleep" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_sleep_mode" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_space_capsule_movie" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_space_moive" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_movie_mode" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_meditation_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_zenmode" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_meditation_mode" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_rapid_cooling" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_refrigeration_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_rapid_cooling" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_deodorize" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_deodorate_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_deodorize" app:tile_textColor="@color/quick_menu_tile_text_color"/>
        <com.xiaopeng.systemui.quickmenu.widgets.XTileButton android:id="@+id/quick_menu_air_clean" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tile_background="@drawable/quick_menu_layout_drawable" app:tile_image="@drawable/ic_mid_qc_pm25_selector" app:tile_orientation="horizontal" app:tile_text="@string/qs_panel_air_clean" app:tile_textColor="@color/quick_menu_tile_text_color"/>
    </com.xiaopeng.systemui.quickmenu.widgets.FlowLayout>
</RelativeLayout>
