<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.systemui.ui.widget.InteractiveOsdView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="620dp" android:layout_height="wrap_content">
    <com.xiaopeng.systemui.ui.widget.InteractiveOsdViewItem android:id="@+id/view_osd_media_volume" android:layout_width="552dp" android:layout_height="144dp" android:layout_marginTop="35dp" android:layout_marginBottom="35dp" android:layout_centerHorizontal="true" app:iconSrc="@drawable/ic_sysui_osd_volume_media" app:volumeName="@string/osd_title_volume"/>
    <com.xiaopeng.systemui.ui.widget.AlphaOptimizedLinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/other_osd_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="29dp" android:layout_below="@+id/view_osd_media_volume" android:layout_centerHorizontal="true">
        <com.xiaopeng.systemui.ui.widget.AnimatedTextView android:textSize="29sp" android:textColor="@color/osdOtherTextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="21dp" android:text="@string/osd_title_volume_other" android:fontFamily="@string/xp_font_medium"/>
        <com.xiaopeng.systemui.ui.widget.AnimatedImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sysui_osd_arrow"/>
    </com.xiaopeng.systemui.ui.widget.AlphaOptimizedLinearLayout>
    <com.xiaopeng.systemui.ui.widget.InteractiveOsdViewItem android:id="@+id/view_osd_navi_volume" android:visibility="gone" android:layout_width="552dp" android:layout_height="144dp" android:layout_marginTop="4dp" android:layout_marginBottom="40dp" android:layout_below="@+id/view_osd_media_volume" android:layout_centerHorizontal="true" app:iconSrc="@drawable/ic_sysui_osd_volume_tts" app:volumeName="@string/osd_title_volume_navi"/>
    <com.xiaopeng.systemui.ui.widget.InteractiveOsdViewItem android:id="@+id/view_osd_speech_volume" android:visibility="gone" android:layout_width="552dp" android:layout_height="144dp" android:layout_marginBottom="35dp" android:layout_below="@+id/view_osd_navi_volume" android:layout_centerHorizontal="true" app:iconSrc="@drawable/ic_sysui_osd_volume_voice" app:volumeName="@string/osd_title_volume_report"/>
</com.xiaopeng.systemui.ui.widget.InteractiveOsdView>
