<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.systemui.infoflow.speech.ui.widget.CtrlCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/view_ctrl_card" android:background="@mipmap/infoflow_bg_card_shadow" android:focusableInTouchMode="true" android:layout_width="588dp" android:layout_height="710dp" android:layout_marginTop="19dp" android:layout_alignParentRight="true">
    <com.xiaopeng.systemui.ui.widget.AlphaOptimizedRelativeLayout android:background="@drawable/bg_infoflow_ctrl_card" android:layout_width="500dp" android:layout_height="680dp" android:layout_marginTop="12dp" android:layout_marginRight="44dp" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <com.xiaopeng.systemui.infoflow.speech.ui.widget.RadialImageView android:id="@+id/img_context_tip" android:visibility="visible" android:layout_width="match_parent" android:layout_height="326dp" android:scaleType="fitXY"/>
        <com.xiaopeng.systemui.infoflow.theme.AnimatedImageView android:id="@+id/iv_ctrl_card_anim" android:layout_width="match_parent" android:layout_height="326dp" android:scaleType="fitEnd" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.systemui.infoflow.theme.AlphaOptimizedLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60dp" android:layout_centerHorizontal="true">
            <com.xiaopeng.systemui.infoflow.theme.AnimatedImageView android:id="@+id/ctrl_title_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="fitXY"/>
            <com.xiaopeng.systemui.infoflow.theme.AnimatedTextView android:textSize="22sp" android:textColor="@color/ctrl_title_color" android:id="@+id/ctrl_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:layout_toRightOf="@+id/ctrl_title_img" android:layout_alignBaseline="@+id/ctrl_title_img" android:layout_alignTop="@+id/ctrl_title_img"/>
        </com.xiaopeng.systemui.infoflow.theme.AlphaOptimizedLinearLayout>
        <RelativeLayout android:id="@+id/ctrl_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.systemui.infoflow.speech.ui.widget.CtrlProgressView android:id="@+id/ctrl_progressbar" android:layout_width="match_parent" android:layout_height="92dp" android:layout_marginTop="330dp" app:indicatorColor="#ffffff" app:indicatorEnable="true" app:isChangeInSideColor="false" app:xorientation="0"/>
        <com.xiaopeng.systemui.infoflow.theme.AnimatedTextView android:textSize="20dp" android:textColor="@color/infoflow_ctrl_card_text_off" android:id="@+id/tv_off" android:visibility="gone" android:layout_width="37dp" android:layout_height="27dp" android:layout_marginLeft="50dp" android:layout_marginTop="343dp" android:text="@string/infoflow_off" android:fontFamily="@string/font_xpeng_bold"/>
        <com.xiaopeng.systemui.infoflow.theme.AnimatedImageView android:id="@+id/img_context_explain" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/bg_ctrl_bottom_ic" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"/>
        <com.xiaopeng.systemui.infoflow.theme.AnimatedTextView android:textSize="80sp" android:textColor="@color/infoflow_ctrl_card_auto" android:id="@+id/fan_auto" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="175dp" android:text="@string/auto" android:layout_centerHorizontal="true" android:fontFamily="@string/font_xpeng_number_bold"/>
    </com.xiaopeng.systemui.ui.widget.AlphaOptimizedRelativeLayout>
</com.xiaopeng.systemui.infoflow.speech.ui.widget.CtrlCardView>
